--- a/user-app/resources/sass/homepage.scss
+++ b/user-app/resources/sass/homepage.scss
@@ -1,3 +1,13 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+}
 
 .bd-placeholder-img {
   font-size: 1.125rem;
